# pyodbc-sqlserver-builder

./: .gitignore  .pylintrc  MANIFEST.in  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py  test_pyodbc_package_build.py
.github/workflows/: build-pyodbc-sqlserver-wheels.yml  build-python-wheels.yml
unixodbc_wrapper/: build_unixodbc.py
