[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyodbc_package"
version = "0.1.0"
description = "pyodbc package with embedded ODBC drivers"
dependencies = ["pyodbc"]
requires-python = ">=3.8"


[tool.setuptools.package-data]
"pyodbc_package" = ["bin/*"]
